--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ author:
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : # Username
+  instagram        : trollmaskwokkkkkkk
   lastfm           : # Username
   linkedin         : thomas-kwok-ts
   mastodon         : # URL
