--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Tung Sum Thomas Kwok"
   pronouns         : # example: "she/her"  
-  bio              : "PhD student at UCLA working on tabular reasonign and prediction via agentic AI and attention memory."
+  bio              : "PhD student at UCLA working on tabular reasoning and prediction via agentic AI and attention memory."
   location         : "Los Angeles, California, USA"
   employer         : "University of California, Los Angeles"
   uri              : # URL
